src/pages/home/Home.scss
@import '../../styles/variables';

.home-wrapper {
	display: flex;
	min-height: var(--no-header-height);
	overflow: visible;
	padding-top: 50px;

	@include tabletSmall {
		overflow: hidden;
		flex-direction: column;
		justify-content: space-between;
		padding-top: 30px;
	}
}

.name-container {
	align-self: center;
	margin-bottom: 90px;
	width: 40%;

	@include heightTopMinMax {
		margin-bottom: 30px;
	}

	@include tabletBig {
		margin-bottom: 45px;
	}

	@include tabletSmall {
		width: 100%;
	}

	// .name-container__title
	&__title {
		font-size: 96px;
		margin-bottom: 45px;

		@include heightTopMinMax {
			font-size: 86px;
		}

		@include tabletBig {
			font-size: 76px;
			margin-bottom: 30px;
		}

		@include tablet {
			font-size: 66px;
		}

		@include mobile {
			font-size: 50px;
		}

		span {
			display: block;
		}
	}

	// .name-container__position
	&__position {
		font-size: 33px;
		margin-bottom: 50px;
		font-family: $LouisGeorgeCaf;
		letter-spacing: 2px;
		white-space: nowrap;
		color: $blue-main;

		@include tabletBig {
			font-size: 28px;
			margin-bottom: 35px;
		}

		@include tablet {
			font-size: 26px;
		}

		@include mobile {
			font-size: 24px;
			letter-spacing: 1.2px;
		}
	}
}

// Photo drawing | drawCanvas |
.photoContainer,
.drawCanvas,
.illustrationImage,
canvas {
	width: 100%;
}

.photoContainer {
	margin: 0 auto;
	align-self: flex-end;
	width: 59%;

	@include heightTopMax {
		width: 55%;
	}

	@include heightTopMin {
		width: 52%;
	}

	@include heightTopMinMax {
		width: 48%;
	}

	@include tabletSmall {
		width: calc(100% + 30px);
		margin-left: -15px;
	}
}

.drawCanvas,
.drawCanvas::before,
.drawCanvas canvas {
	will-change: transform;
}

.drawCanvas {
	background-size: cover;
	background-repeat: no-repeat;
	background-position: top;
	padding-bottom: 82.6%;
	position: relative;
	z-index: 0;

	&::before {
		content: '';
		position: absolute;
		top: 0;
		left: 0;
		width: 100%;
		height: 100%;
		background: inherit;
		z-index: -1;
		pointer-events: none;
		filter: drop-shadow(0 0 6px rgba(#000000, 0.3));

		@include tabletBig {
			filter: drop-shadow(0 0 5px rgba(#000000, 0.3));
		}
	}

	canvas,
	.illustrationImage {
		position: absolute;
		top: 0;
		left: 0;
	}

	.illustrationImage {
		display: none;
	}
}

